--- a/environment.yml
+++ b/environment.yml
@@ -2,7 +2,8 @@ name: env-from-yaml
 channels:
 - pytorch
 dependencies:
-- python=3.6
+- python=3.7
 - numpy
 - pytorch # unused
 - pytest
+- tensorflow
